<resources>
    <string name="app_name">EduView</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="google_maps_keyLucas">AIzaSyC2ZxuLfEcoE0RnQkgy3nSd5Gn2PPzC5b0</string>
    <string name="google_maps_keyCaio">AIzaSyD5Q7OyumBsPZaiC4dbeLr07U4K2KvVLi4</string>

    <string name="PERMISSION_DENIED">Permissão Negada! A localização padrão (Campus do Pici) será carregada.</string>
    <string name="MAIN_MARKER_TEXT">Você está aqui!</string>
    <string name="GPS_DISABLED">Seu Serviço de Localização está desativado! A localização padrão (Campus do Pici) será carregada.</string>
    <string name="title_activity_info_escola">InfoEscola</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="cadastro_username">Username:</string>
    <string name="cadastro_password">Password:</string>
    <string name="cadastro_password_confirma">Confirme o Password:</string>
    <string name="cadastro_nome">Nome:</string>
    <string name="cadastro_email">Email:</string>
    <string name="cadastro_cadastrar">Cadastrar</string>
    <string name="login_logar">Logar</string>
    <string name="login_cadastrar"><u>Cadastrar</u></string>

    <string name="MENU_Cadastro">Login/Cadastro</string>
    <string name="MENU_Buscar">Buscar</string>
    <string name="MENU_Filtrar">Filtrar</string>
    <string name="MENU_Ranking">Ranking</string>
    <string name="MENU_Historico">Histórico de Escolas</string>

    <string name="marcadoLabel">Receber notificações de novas avaliações </string>

</resources>

