<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="dspm.dc.ufc.br.eduview.LoginFragment"
        android:orientation="vertical">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/size_label_cadastros"
            android:text="@string/cadastro_username"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id = "@+id/login_username"
            android:hint="@string/cadastro_username"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/size_label_cadastros"
            android:text="@string/cadastro_password"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id = "@+id/login_password"
            android:hint="@string/cadastro_password"
            android:inputType="textPassword"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_botao"
            android:text="@string/login_logar"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/login_cadastrar"
            android:textSize="@dimen/size_label_login_cadastrar"
            android:text="@string/login_cadastrar"
            android:textAlignment="textEnd"
            />

    </LinearLayout>
</ScrollView>


